# precip_type_diagnostic

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: acceleration.md  initial-discovery.md  provenance.md  release-and-operations.md  release-checklist.md  science-and-architecture.md  scientific-validation.md
docs/acceptance/balfrin-smoke-20260531/: README.md  ch1-command-output.json  ch1-monitoring.json  ch2-monitoring.json  ch2-summary.json  environment.json  grib-validation.json  help.txt
docs/scientific-validation-candidates/: README.md  icon-ch1-20260531-2100-member000-profile-candidates.json
scripts/: fetch_test_fixtures.sh
src/precip_type_diag/: __init__.py  __main__.py  benchmark.py  constants.py  gribio.py  grid.py  monitoring.py  netcdfio.py  numba_backend.py  operational.py  probabilities.py  profile.py  profile_samples.py  provenance.py  verification.py
src/precip_type_diag/definitions/grib2/localConcepts/default/: shortName.def
src/precip_type_diag/definitions/grib2/localConcepts/edzw/: name.def  units.def
src/precip_type_diag/definitions/grib2/localConcepts/lssw/: paramId.def
src/precip_type_diag/definitions/grib2/tables/32/: 4.201.table
test/: test_cli.py  test_gribio.py  test_grid.py  test_monitoring.py  test_numba_backend.py  test_operational.py  test_probabilities.py  test_profile.py  test_profile_samples.py  test_provenance.py  test_upstream_reference_parity.py  test_verification.py
