[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precip-type-diag"
version = "0.2.0"
description = "ICON precipitation-type diagnostic following Zukanovic MSc thesis."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.26,<2.4",
  "numba>=0.65,<0.66",
  "earthkit-data>=0.18.3,<0.20",
  "eccodes>=2.38,<2.40",
  "eccodes-cosmo-resources-python>=2.38.3.1,<2.40",
]

[project.scripts]
precip-type-diag = "precip_type_diag.__main__:main"

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
]
dev = [
  "mypy>=1.14,<1.20",
  "ruff>=0.8,<0.14",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
precip_type_diag = [
  "definitions/grib2/localConcepts/default/*.def",
  "definitions/grib2/localConcepts/ecmf/*.def",
  "definitions/grib2/localConcepts/edzw/*.def",
  "definitions/grib2/localConcepts/lssw/*.def",
  "definitions/grib2/tables/32/*.table",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501",
  "B905",
  "UP017",
]

[tool.ruff.lint.isort]
known-first-party = ["precip_type_diag"]

[tool.mypy]
python_version = "3.11"
files = ["src/precip_type_diag"]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.coverage.run]
omit = [
  "src/precip_type_diag/benchmark.py",
  "src/precip_type_diag/numba_backend.py",
]
